--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      const API_URL = 'http://localhost:3000/messages';
+      const API_URL = '/messages';
       const $ = (selector) => document.querySelector(selector);
 
       const socket = io()
