--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
             const options = {
               method: 'POST',
               headers: {'Content-Type': 'application/json'},
-              body: JSON.stringify({ message, date: new Date().getTime() }),
+              body: JSON.stringify({ message, timeZone: Intl.DateTimeFormat().resolvedOptions().timeZone }),
             };
 
             const { status, data } = await fetch(API_URL, options).then(res => res.json());
